ctx-demo/04-blackbox-exporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
        - name: app
          image: prom/blackbox-exporter:v0.19.0
          ports:
            - name: http
              containerPort: 9115
          volumeMounts:
            - name: shared
              mountPath: /etc/blackbox_exporter
          securityContext:
            capabilities:
              add: ["NET_RAW"]
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace-pvc
        - name: shared
          emptyDir:
