ctx-demo/04-blackbox-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: blackbox-exporter-svc
spec:
  type: ClusterIP
  selector:
      app: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: 9115
      protocol: TCP
