ctx-demo/04-blackbox-exporter/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blackbox-exporter-ir
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`blackbox.demo-apps.de`)
    kind: Rule
    services:
    - name: blackbox-exporter-svc
      port: 9115
